DH: fix scroll on iphone

--- a/wp-content/themes/denholm/scss/layouts/_layout.scss
+++ b/wp-content/themes/denholm/scss/layouts/_layout.scss
@@ -31,6 +31,7 @@ body {
   text-size-adjust: none;
   // background: #ccc;
   font-size: 12px;
+  overflow-x: hidden;
 
   &.is-show {
     overflow: hidden;
